--- a/_articles/dynamic-routing-copy.mdx
+++ b/_articles/dynamic-routing-copy.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Dynamic Routing and Static Generation'
+title: 'Dynamic Routing and Static Generation Copy'
 image: '/images/index-page-meta/index-image.jpg'
 excerpt: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Praesent elementum facilisis leo vel fringilla est ullamcorper eget. At imperdiet dui accumsan sit amet nulla facilities morbi tempus.'
 date: '2020-03-16T05:35:07.322Z'
@@ -20,10 +20,5 @@ Tristique senectus et netus et malesuada fames ac turpis. Ridiculous mus mauris 
 <a href="https://juristr.com">juristr.com</a>
 
 <Youtube uid="9nDjLYXBCYM" title="Nx for React in under 3 minutes" />
-
-```typescript:Hello.tsx
-const hoge = 1;
-console.log({hoge})
-```
 
 ## Hello, world!
