記事を修正

--- a/_articles/dynamic-routing-copy.mdx
+++ b/_articles/dynamic-routing-copy.mdx
@@ -11,6 +11,8 @@ tags:
 
 # テスト
 
+[このレポジトリ](https://github.com/juristr/blog-series-nextjs-nx/tree/09-deploy-to-vercel)のマークダウンを下にテスト用の記事を書いています(自分で書くのが面倒だったので)
+
 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Praesent elementum facilisis leo vel fringilla est ullamcorper eget. At imperdiet dui accumsan sit amet nulla facilities morbi tempus. Praesent elementum facilisis leo vel fringilla. Congue mauris rhoncus aenean vel. Egestas sed tempus urna et pharetra pharetra massa massa ultricies.
 
 ## Lorem Ipsum
