記事のレイアウトを修正

--- a/_articles/test.mdx
+++ b/_articles/test.mdx
@@ -31,3 +31,5 @@ throw new Error('Something went wrong...');
 [Example.com](https://www.example.com)
 
 パラグラフ
+
+[Twitterカードの検証用ページ](https://cards-dev.twitter.com/validator)
